--- a/styles/ie.css
+++ b/styles/ie.css
@@ -13,6 +13,7 @@
 /**
  * IE FIXES
  * Your IE fixes
+ * -------------------------------------------------------------------------------------------------
  */
 .ie {
 	display: none !important
