--- a/styles/media.css
+++ b/styles/media.css
@@ -14,6 +14,7 @@
 /**
  * SMARTPHONES
  *
+ * -------------------------------------------------------------------------------------------------
  */
 
 /* Smartphones - portrait and landscape */
@@ -32,6 +33,7 @@
 /**
  * iPADS
  *
+ * -------------------------------------------------------------------------------------------------
  */
 
 /* iPads - portrait and landscape */
@@ -50,6 +52,7 @@
 /**
  * SCREENS
  *
+ * -------------------------------------------------------------------------------------------------
  */
 
 /* Desktops and laptops */
@@ -64,6 +67,7 @@
 /**
  * ORIENTATION
  *
+ * -------------------------------------------------------------------------------------------------
  */
 
 /* General portrait orientation */
