--- a/styles/inputs.css
+++ b/styles/inputs.css
@@ -3,6 +3,9 @@
  *
  * BlankPlate Inputs stylesheet
  *
+ * Normally you don't have to make any changes in this file.
+ * Your changes should be placed in styles.css file.
+ *
  * @copyright	Copyright 2012, Dimitris Krestos
  * @license		Apache License, Version 2.0 (http://www.opensource.org/licenses/apache2.0.php)
  * @link		http://vdw.staytuned.gr/html5-starter-kit-blankplate/
@@ -13,6 +16,7 @@
 /**
  * INPUTS
  * Basic rules for inputs, textareas and selects
+ * -------------------------------------------------------------------------------------------------
  */
 INPUT, TEXTAREA, SELECT {
 	background-color: #FFF;
