--- a/styles/reset.css
+++ b/styles/reset.css
@@ -16,6 +16,7 @@
 /**
  * GLOBAL
  * Reset margins and paadings for all
+ * -------------------------------------------------------------------------------------------------
  */
 * {
 	margin: 0;
@@ -26,6 +27,7 @@
 /**
  * COMMON
  * Based on Eric Meyer's reset (http://meyerweb.com/eric/tools/css/reset/index.html)
+ * -------------------------------------------------------------------------------------------------
  */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,time, mark, audio, video {
 	background: transparent;
@@ -41,6 +43,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 /**
  * HTML5 ELEMENTS
  * Handle the following as blocks
+ * -------------------------------------------------------------------------------------------------
  */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block
@@ -49,6 +52,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 /**
  * HEADINGS
  * Reset headings weight
+ * -------------------------------------------------------------------------------------------------
  */
 h1, h2, h3, h4, h5, h6 {
 	font-weight: normal
@@ -57,6 +61,7 @@ h1, h2, h3, h4, h5, h6 {
 /**
  * TABLES
  * Reset table borders
+ * -------------------------------------------------------------------------------------------------
  */
 table {
 	border-collapse: collapse;
@@ -66,6 +71,7 @@ table {
 /**
  * LISTS
  * Reset list styles
+ * -------------------------------------------------------------------------------------------------
  */
 ol, ul {
 	list-style: none outside none
@@ -74,6 +80,7 @@ ol, ul {
 /**
  * MORE RESET
  *
+ * -------------------------------------------------------------------------------------------------
  */
 hr {
 	border: 0;
@@ -90,6 +97,7 @@ blockquote, q {
 /**
  * MORE FIXES
  *
+ * -------------------------------------------------------------------------------------------------
  */
 a {
 	cursor: pointer
