--- a/styles/helpers.css
+++ b/styles/helpers.css
@@ -113,10 +113,12 @@
 }
 
 /* Rule based on http://css3please.com/ */
+/* Use this convertor http://kimili.com/journal/rgba-hsla-css-generator-for-internet-explorer/ */
 .rgba {
 	background-color: transparent;
-	background-color: rgba(255, 255, 255, 0.6); /* FF3+, Saf3+, Opera 10.10+, Chrome, IE9 */
-			  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#66FFFFFF,endColorstr=#66FFFFFF); /* IE6–IE9 */
+	background-color: rgba(0, 0, 0, 0.8); /* FF3+, Saf3+, Opera 10.10+, Chrome, IE9 */
+		  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#CC000000,endColorstr=#CC000000)"; /* IE8 */
+			  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#CC000000,endColorstr=#CC000000); /* IE6 & 7 */
 				zoom: 1;
 }
 
